--- a/all-pages.html
+++ b/all-pages.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="theme-color" content="#54c7d9">
 	<!--Favicon-->
 	<link href="favicon.ico" rel="shortcut icon">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -152,10 +153,21 @@
 				</div>
 				<div class="page-title"><h1>All Pages</h1></div>
 				<ol>
-					<li><a href="index.html" target="_blank"><span>Main page</span></a></li>
-					<li><a href="typography.html" target="_blank"><span>Typography</span></a></li>
-					<li><a href="products.html" target="_blank"><span>Products</span></a></li>
-					<li><a href="news.html" target="_blank"><span>News</span></a></li>
+					<li><a href="index.html" target="_blank">
+						<span>Main page</span>
+					</a></li>
+					<li><a href="typography.html" target="_blank">
+						<span>Typography</span>
+					</a></li>
+					<li><a href="products.html" target="_blank">
+						<span>Products</span>
+					</a></li>
+					<li><a href="news.html" target="_blank">
+						<span>News</span>
+					</a></li>
+					<li><a href="contacts.html" target="_blank">
+						<span>Contacts</span>
+					</a></li>
 				</ol>
 			</div>
 		</div>
