--- a/contacts.html
+++ b/contacts.html
@@ -344,7 +344,7 @@
 <!--JQuery UI-->
 <script src="js/vendor/jquery-ui.min.js"></script>
 <!--Map-->
-<script src="http://maps.googleapis.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
 <!--Widgets-->
 <script src="js/widgets.js"></script>
 <!--Main functions-->
