--- a/contacts.html
+++ b/contacts.html
@@ -149,46 +149,45 @@
 				<div class="contacts__holder">
 					<div class="contacts__frame">
 						<!--locate-->
-						<div class="locate">
-							<div id="local-01-map" class="local-map active"></div>
-							<div id="local-02-map" class="local-map"></div>
-							<div class="locate-bg__item active" style="background-image: url(img/img-locate-01.jpg)"></div>
-							<div class="locate-bg__item" style="background-image: url(img/img-locate-02.jpg)"></div>
-							<div class="locate__holder">
-								<ul class="locate-controls">
-									<li class="active"><a href="#"><span>USA & Canada</span></a></li>
-									<li><a href="#"><span>Europe</span></a></li>
-								</ul>
-								<div class="see-on-map">
-									<a href="#">
-										<i class="depict-pin">
-											<!--<svg height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink">
-												<path d="M479.5,466 C479.5,466 487,456.127718 487,451.812818 C487,447.497918 484.518799,443.999999 479.5,444 C474.481201,444.000001 472,447.497918 472,451.812818 C472,456.127718 479.5,466 479.5,466 L479.5,466 Z M479.5,454.5 C481.709139,454.5 483.5,452.709139 483.5,450.5 C483.5,448.290861 481.709139,446.5 479.5,446.5 C477.290861,446.5 475.5,448.290861 475.5,450.5 C475.5,452.709139 477.290861,454.5 479.5,454.5 L479.5,454.5 Z" fill="#000000" />
-											</svg>-->
-										</i>
-									</a>
-								</div>
+						<div class="locate locate-js">
+							<div id="local-01-map" class="local-map local-map-js"></div>
+							<div id="local-02-map" class="local-map local-map-js"></div>
+							<div class="locate-bg__item locate-bg-js active" style="background-image: url(img/img-locate-01.jpg)"></div>
+							<div class="locate-bg__item locate-bg-js" style="background-image: url(img/img-locate-02.jpg)"></div>
+							<div class="locate-controls locate-controls-js">
+								<a href="#" class="active"><span>USA & Canada</span></a>
+								<a href="#"><span>Europe</span></a>
+							</div>
+							<a class="see-map see-map-js" href="#">
+								<i class="depict-pin">
+									<!--<svg height="24px" version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink">
+										<path d="M479.5,466 C479.5,466 487,456.127718 487,451.812818 C487,447.497918 484.518799,443.999999 479.5,444 C474.481201,444.000001 472,447.497918 472,451.812818 C472,456.127718 479.5,466 479.5,466 L479.5,466 Z M479.5,454.5 C481.709139,454.5 483.5,452.709139 483.5,450.5 C483.5,448.290861 481.709139,446.5 479.5,446.5 C477.290861,446.5 475.5,448.290861 475.5,450.5 C475.5,452.709139 477.290861,454.5 479.5,454.5 L479.5,454.5 Z" fill="#000000" />
+									</svg>-->
+								</i>
+								<i class="depict-close"></i>
+							</a>
+							<div class="locate-tabs locate-tabs-js">
 								<div class="locate-adr">
-									<div class="locate-adr__item active">
+									<div class="locate-adr__item locate-adr-js active">
 										9330 LBJ Freeway, Suite 900 <br>
 										Dallas, TX 75243 <br>
 										PO Box 647, LIghtfoot, VA 23090
 									</div>
-									<div class="locate-adr__item">
+									<div class="locate-adr__item locate-adr-js">
 										Toompuiestee 35, korrus 2, <br>
 										Tallinn 10133, Estonia
 									</div>
 								</div>
 								<div class="locate-cont">
-									<dl class="locate-cont__item active">
+									<dl class="locate-cont__item locate-cont-js active">
 										<dt class="locate__tel">Tel.:</dt>
 										<dd><a href="tel:2145613922">(214) 561-3922</a></dd>
 										<dt>E-mail:</dt>
 										<dd><a href="mailto:info@aztoys.com">info@aztoys.com</a></dd>
 									</dl>
-									<dl class="locate-cont__item">
-										<dt>Tel.:</dt>
-										<dd class="locate__tel"><a href="tel:003725183088">003725183088</a></dd>
+									<dl class="locate-cont__item locate-cont-js">
+										<dt class="locate__tel">Tel.:</dt>
+										<dd><a href="tel:003725183088">003725183088</a></dd>
 										<dt>E-mail:</dt>
 										<dd><a href="mailto:info@aztoys.com">info@aztoys.com</a></dd>
 									</dl>
