--- a/contacts.html
+++ b/contacts.html
@@ -343,7 +343,7 @@
 <!--JQuery UI-->
 <script src="js/vendor/jquery-ui.min.js"></script>
 <!--Map-->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=en"></script>
 <!--Widgets-->
 <script src="js/widgets.js"></script>
 <!--Main functions-->
