--- a/elements.html
+++ b/elements.html
@@ -93,6 +93,12 @@
 					<li><i class="depict-check-disabled"></i></li>
 					<li><i class="depict-load"></i></li>
 					<li><i class="depict-load-h"></i></li>
+					<li><i class="depict-pin"></i></li>
+					<li><i class="depict-pin-h"></i></li>
+					<li><i class="depict-close"></i></li>
+					<li><i class="depict-close-h"></i></li>
+					<li><i class="depict-play"></i></li>
+					<li><i class="depict-play-h"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
