--- a/index.html
+++ b/index.html
@@ -638,7 +638,79 @@
 			<section class="video-section">
 				<h2>Watch our video</h2>
 				<div class="video-slider">
-					<img src="img/temp_img-video-slide.jpg" alt="image description" />
+					<!--<img src="img/temp_img-video-slide.jpg" alt="image description" />-->
+					<!-- Slider main container -->
+					<div class="swiper-container">
+						<!-- Additional required wrapper -->
+						<div class="swiper-wrapper">
+							<!-- Slides -->
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-01.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning and training book for the very young</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-02.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning and training book for training book for the very young</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-03.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning and training book for the very young learning and training</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-04.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning and training book for the very young learning and training book for the</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-05.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-06.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning and training</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="swiper-holder">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<div class="swiper-img"><img src="img/img-video-07.jpg" alt="image description" /></div>
+									<div class="swipe-title">Talking learning and training book for the very young</div>
+									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+								</div>
+							</div>
+						</div>
+						<!-- If we need pagination -->
+						<!--<div class="swiper-pagination"></div>-->
+
+						<!-- If we need navigation buttons -->
+						<div class="swiper-button-prev"></div>
+						<div class="swiper-button-next"></div>
+
+						<!-- If we need scrollbar -->
+						<!--<div class="swiper-scrollbar"></div>-->
+					</div>
 				</div>
 				<div class="buttons"><a href="#" class="btn-default">All video</a></div>
 			</section>
