--- a/index.html
+++ b/index.html
@@ -637,6 +637,25 @@
 			<!--video section-->
 			<section class="video-section">
 				<h2>Watch our video</h2>
+				<style>
+					#video-placeholder{
+						width: 100%;
+					}
+				</style>
+
+				<div id="controls">
+					<ul>
+						<li>
+							<h2>Play</h2>
+							<i id="play" class="material-icons">play_arrow</i>
+						</li>
+
+						<li>
+							<h2>Pause</h2>
+							<i id="pause" class="material-icons">pause</i>
+						</li>
+					</ul>
+				</div>
 				<div class="video-slider">
 					<!--<img src="img/temp_img-video-slide.jpg" alt="image description" />-->
 					<!-- Slider main container -->
@@ -646,6 +665,7 @@
 							<!-- Slides -->
 							<div class="swiper-slide">
 								<div class="swiper-holder">
+									<div id="video-placeholder"></div>
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
 									<div class="swiper-img"><img src="img/img-video-01.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning and training book for the very young</div>
@@ -654,7 +674,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
 									<div class="swiper-img"><img src="img/img-video-02.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning and training book for training book for the very young</div>
 									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
@@ -662,7 +682,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
 									<div class="swiper-img"><img src="img/img-video-03.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning and training book for the very young learning and training</div>
 									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
@@ -670,7 +690,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
 									<div class="swiper-img"><img src="img/img-video-04.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning and training book for the very young learning and training book for the</div>
 									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
@@ -678,7 +698,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
 									<div class="swiper-img"><img src="img/img-video-05.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning</div>
 									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
@@ -686,7 +706,7 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
 									<div class="swiper-img"><img src="img/img-video-06.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning and training</div>
 									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
@@ -694,25 +714,18 @@
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
+									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
 									<div class="swiper-img"><img src="img/img-video-07.jpg" alt="image description" /></div>
 									<div class="swipe-title">Talking learning and training book for the very young</div>
 									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
 								</div>
 							</div>
 						</div>
-						<!-- If we need pagination -->
-						<!--<div class="swiper-pagination"></div>-->
-
-						<!-- If we need navigation buttons -->
 						<div class="swiper-button-prev"></div>
 						<div class="swiper-button-next"></div>
-
-						<!-- If we need scrollbar -->
-						<!--<div class="swiper-scrollbar"></div>-->
 					</div>
 				</div>
-				<div class="buttons"><a href="#" class="btn-default">All video</a></div>
+				<div class="buttons"><a href="#" id="play-button" class="btn-default">All video</a></div>
 			</section>
 			<!--video section end-->
 			<div class="section-title"><h2>News and Articles</h2></div>
@@ -853,6 +866,8 @@
 <script src="js/vendor/jquery-ui.min.js"></script>
 <!--Widgets-->
 <script src="js/widgets.js"></script>
+<script src="https://www.youtube.com/iframe_api"></script>
+<!--<script src="script.js"></script>-->
 <!--Main functions-->
 <script src="js/functions.js"></script>
 </body>
