--- a/index.html
+++ b/index.html
@@ -637,25 +637,7 @@
 			<!--video section-->
 			<section class="video-section">
 				<h2>Watch our video</h2>
-				<style>
-					#video-placeholder{
-						width: 100%;
-					}
-				</style>
 
-				<div id="controls">
-					<ul>
-						<li>
-							<h2>Play</h2>
-							<i id="play" class="material-icons">play_arrow</i>
-						</li>
-
-						<li>
-							<h2>Pause</h2>
-							<i id="pause" class="material-icons">pause</i>
-						</li>
-					</ul>
-				</div>
 				<div class="video-slider">
 					<!--<img src="img/temp_img-video-slide.jpg" alt="image description" />-->
 					<!-- Slider main container -->
@@ -665,59 +647,58 @@
 							<!-- Slides -->
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<div id="video-placeholder"></div>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>
-									<div class="swiper-img"><img src="img/img-video-01.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning and training book for the very young</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-01.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning and training book for the very young</div>
+									<a href="https://www.youtube.com/embed/BsPP0YExdXE" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
-									<div class="swiper-img"><img src="img/img-video-02.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning and training book for training book for the very young</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-02.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning and training book for training book for the very young</div>
+									<a href="https://www.youtube.com/embed/Mxbu7EhMyag" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
-									<div class="swiper-img"><img src="img/img-video-03.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning and training book for the very young learning and training</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-03.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning and training book for the very young learning and training</div>
+									<a href="https://www.youtube.com/embed/Dbkc4SMFhWw" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
-									<div class="swiper-img"><img src="img/img-video-04.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning and training book for the very young learning and training book for the</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-04.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning and training book for the very young learning and training book for the</div>
+									<a href="https://www.youtube.com/embed/uVQZzQRRS1w" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
-									<div class="swiper-img"><img src="img/img-video-05.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-05.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning</div>
+									<a href="https://www.youtube.com/embed/1XCGEAzvjFc" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
-									<div class="swiper-img"><img src="img/img-video-06.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning and training</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-06.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning and training</div>
+									<a href="https://www.youtube.com/embed/CrPhM4CEyv0" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="swiper-holder">
-									<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/BsPP0YExdXE" frameborder="0" allowfullscreen></iframe>-->
-									<div class="swiper-img"><img src="img/img-video-07.jpg" alt="image description" /></div>
-									<div class="swipe-title">Talking learning and training book for the very young</div>
-									<a href="#" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<div class="swiper-img swiper-img-js"><img src="img/img-video-07.jpg" alt="image description" /></div>
+									<div class="swipe-title swipe-title-js">Talking learning and training book for the very young</div>
+									<a href="https://www.youtube.com/embed/OczR66fMxM0" class="play-video play-video-js"><span><i class="depict-play">Play</i></span></a>
+									<a href="#" class="close-video close-video-js">Close</a>
 								</div>
 							</div>
 						</div>
@@ -866,8 +847,7 @@
 <script src="js/vendor/jquery-ui.min.js"></script>
 <!--Widgets-->
 <script src="js/widgets.js"></script>
-<script src="https://www.youtube.com/iframe_api"></script>
-<!--<script src="script.js"></script>-->
+<!--<script src="https://www.youtube.com/iframe_api"></script>-->
 <!--Main functions-->
 <script src="js/functions.js"></script>
 </body>
