--- a/products.html
+++ b/products.html
@@ -152,10 +152,10 @@
 					<a href="#" class="button" data-filter=".tag-exclusive">Exclusive</a>
 				</div>
 			</div>
-			<div class="filters__group has-drop">
+			<div class="filters__group has-drop filters-content-js">
 				<a href="#" class="filter-more-options filter-more-options-js"><span>More options</span><i class="depict-angle"></i></a>
 				<!--filters drop-->
-				<div class="filters-drop">
+				<div class="filters-drop filters-drop-js">
 					<div class="filters-drop__holder">
 						<div class="filters-drop__group">
 							<strong class="filters-drop__title">Category:</strong>
