--- a/typography.html
+++ b/typography.html
@@ -153,7 +153,7 @@
 				<!--breadcrumbs end-->
 
 				<!--social-->
-				<div class="soc full-width">
+				<div class="soc full-width soc-js">
 					<ul class="soc-list">
 						<li class="soc-facebook">
 							<a href="#">
@@ -194,7 +194,7 @@
 				<!--datetime end-->
 				<h1><span style="color: #e61f00;">(h1)</span> The Road to Philly: DNC delegates turn to crowdfunding</h1>
 				<div class="clear"></div>
-				<div class="imgc full-width" style="text-align: center;">
+				<div class="imgc full-width main-img-js" style="text-align: center;">
 					<img src="img/img-expl-lg.jpg" alt="image description">
 				</div>
 				<h2><span style="color: #e61f00;">(h2)</span> Like their candidates, delegates to the convention are turning to the internet and social media to help raise money.</h2>
@@ -755,16 +755,72 @@
 
 <!--FOOTER-->
 <footer class="footer">
-	<div class="footer-holder layout">
-		<div class="footer-col footer-col_left">
-			<span class="copyright">&copy; “AZ Toys” <span class="nobr">2006-2016</span></span>
-		</div>
-		<div class="footer-col"><a href="tel:520-834-1191">520-834-1191</a> <span class="slash">/</span> <a href="mailto:az-toys@gmail.com">az-toys@gmail.com</a></div>
-		<div class="footer-col footer-col_right">
-			<div class="site-developer">
-				<a href="http://astronim.by/"> <span class="text-inner">Design & Programming</span> - <span class="site-developer_logo">Astronim*</span> </a>
+	<div class="layout">
+		<!--footer nav-->
+		<div class="footer-nav">
+			<div class="footer-nav__col">
+				<ul class="footer-nav__list">
+					<li><a href="about.html"><span>About Us</span></a></li>
+					<li><a href="products.html"><span>Products</span></a></li>
+					<li><a href="apps.html"><span>Apps</span></a></li>
+					<li><a href="news.html"><span>News</span></a></li>
+					<li><a href="contacts.html"><span>Contacts</span></a></li>
+				</ul>
+			</div>
+			<div class="footer-nav__col">
+				<strong class="footer-nav__title"><a href="catalog.html#new-toys"><span>New toys</span></a></strong>
+				<ul class="footer-nav__links">
+					<li><a href="#">Baby player fire kids Tablet</a></li>
+					<li><a href="#">Baby player Ladybird</a></li>
+					<li><a href="#">Baby player fire kids</a></li>
+					<li><a href="#">Baby player Ladybird red</a></li>
+				</ul>
+			</div>
+			<div class="footer-nav__col">
+				<strong class="footer-nav__title"><a href="catalog.html#popular-toys"><span>Popular toys</span></a></strong>
+				<ul class="footer-nav__links">
+					<li><a href="#">Baby player fire kids Tablet</a></li>
+					<li><a href="#">Baby player Ladybird</a></li>
+					<li><a href="#">Baby player fire kids</a></li>
+					<li><a href="#">Baby player Ladybird red</a></li>
+					<li><a href="#">Baby player fire kids</a></li>
+				</ul>
+			</div>
+			<div class="footer-nav__col no-space">
+				<div class="soc-plug">
+					<img src="img/temp_soc-plug.jpg" alt="image description" />
+				</div>
+			</div>
+			<div class="footer-nav__col col-lg">
+				<strong class="footer-nav__title"><a href="contacts.html"><span>Located</span></a></strong>
+				<div class="our-address">at 4915 E. Speedway Blvd. Tucson, Arizona In The Lobby of S&S Motorsports</div>
+				<div class="subscribe-form">
+					<form action="#" method="get">
+						<div class="label-holder">
+							<label for="form-subscribe-news">Subscribe our news:</label>
+						</div>
+						<div class="subscribe-form__row">
+							<input type="text" placeholder="Текстовое поле" id="form-subscribe-news" />
+							<input type="submit" value="ok">
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
+		<!--footer nav end-->
+		<!--footer holder-->
+		<div class="footer-holder">
+			<div class="footer-col footer-col_left">
+				<span class="copyright">&copy; “AZ Toys” <span class="nobr">2006-2016</span></span>
+			</div>
+			<div class="footer-col"><a href="tel:520-834-1191">520-834-1191</a> <span class="slash">/</span> <a href="mailto:az-toys@gmail.com">az-toys@gmail.com</a></div>
+			<div class="footer-col footer-col_right">
+				<div class="site-developer">
+					<a href="http://astronim.by/"> <span class="text-inner">Design & Programming</span> - <span class="site-developer_logo">Astronim*</span> </a>
+				</div>
+			</div>
+		</div>
+		<!--footer holder end-->
 	</div>
 </footer>
 <!--FOOTER end-->
