--- a/products.html
+++ b/products.html
@@ -202,7 +202,10 @@
 				<!--filters drop end-->
 			</div>
 			<div class="filters__group">
-				<div class="filters__counter filters-counter-js"></div>
+				<div class="button find-items find-items-js">
+					<div class="filters-counter-ok">ok</div>
+					<div class="filters-counter filters-counter-js"></div>
+				</div>
 				<a href="#" class="button clear-filter disabled"><i class="depict-clear"></i><span>Clear filter</span></a>
 			</div>
 			<div class="filters__group">
