--- a/typography.html
+++ b/typography.html
@@ -203,6 +203,9 @@
 						<div style="width: 70px; height: 18px; float: left; background: #4c4c4c;"></div>
 						&nbsp;&ndash;&nbsp;<em>#4c4c4c</em>
 						<div style="clear: both;"></div>
+						<div style="width: 70px; height: 18px; float: left; background: #d8d8d8;"></div>
+						&nbsp;&ndash;&nbsp;<em>#d8d8d8</em>
+						<div style="clear: both;"></div>
 						<div style="width: 70px; height: 18px; float: left; background: #333;"></div>
 						&nbsp;&ndash;&nbsp;<em>#333</em>
 						<div style="clear: both;"></div>
