--- a/all-pages.html
+++ b/all-pages.html
@@ -26,9 +26,31 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<!--screen-->
-<div class="screen"><div class="screen__bg"></div></div>
-<!--screen end-->
+<!--HEADER-->
+<header class="header">
+	<!--logo-->
+	<div class="logo">
+		<a href="index.html">
+			<strong class="logo__img">AZToys</strong>
+		</a>
+	</div>
+	<img class="logo__print" src="img/logo.png" alt="logo">
+	<!--logo end-->
+	<!--btn menu-->
+	<a href="#" class="btn-menu">
+		Меню
+		<div class="btn-lines">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</a>
+	<!--btn menu end-->
+	<!--slogan-->
+	<div class="logo__slogan"><span>Children's learning "Azbook"</span></div>
+	<!--slogan end-->
+</header>
+<!--HEADER end-->
 
 <!--SIDEBAR-->
 <aside class="sidebar">
@@ -131,9 +153,9 @@
 		</div>
 		<!--sidebar footer end-->
 	</div>
-	<div class="color-tape"></div>
 </aside>
-<!--SIDEBAR-->
+<div class="color-tape-vertical"></div>
+<!--SIDEBAR end-->
 
 <!--WRAPPER-->
 <div class="wrapper">
