--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
+<!--screen-->
+<div class="color-tape-horizontal"></div>
+<div class="screen">
+	<div class="screen__bg"></div>
+	<strong class="screen__logo">AZToys</strong>
+	<strong class="screen__title">Interactive toys inspiring fun learning!</strong>
+</div>
+<!--screen end-->
+
 <!--HEADER-->
 <header class="header">
 	<!--logo-->
@@ -50,10 +59,6 @@
 	<!--slogan end-->
 </header>
 <!--HEADER end-->
-
-<!--screen-->
-<div class="screen"><div class="screen__bg"></div></div>
-<!--screen end-->
 
 <!--SIDEBAR-->
 <aside class="sidebar">
@@ -156,9 +161,9 @@
 		</div>
 		<!--sidebar footer end-->
 	</div>
-	<div class="color-tape"></div>
 </aside>
-<!--SIDEBAR-->
+<div class="color-tape-vertical"></div>
+<!--SIDEBAR end-->
 
 <!--WRAPPER-->
 <div class="wrapper">
