--- a/products.html
+++ b/products.html
@@ -25,6 +25,32 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
+<!--HEADER-->
+<header class="header">
+	<!--logo-->
+	<div class="logo">
+		<a href="index.html">
+			<strong class="logo__img">AZToys</strong>
+		</a>
+	</div>
+	<img class="logo__print" src="img/logo.png" alt="logo">
+	<!--logo end-->
+	<!--btn menu-->
+	<a href="#" class="btn-menu">
+		Меню
+		<div class="btn-lines">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</a>
+	<!--btn menu end-->
+	<!--slogan-->
+	<div class="logo__slogan"><span>Children's learning "Azbook"</span></div>
+	<!--slogan end-->
+</header>
+<!--HEADER end-->
+
 <!--SIDEBAR-->
 <aside class="sidebar">
 	<div class="sidebar__holder">
@@ -40,8 +66,8 @@
 		<nav class="nav">
 			<ul class="nav-list">
 				<li><a href="index.html"><span>Home</span></a></li>
-				<li class="has-drop">
-					<a href="products.html"><span>Products</span></a>
+				<li class="active has-drop">
+					<a href="javascript:void(0)"><span>Products</span></a>
 					<div class="nav-drop js-nav-drop">
 						<div class="nav-drop__holder">
 							<div class="nav-drop__group">
@@ -126,9 +152,9 @@
 		</div>
 		<!--sidebar footer end-->
 	</div>
-	<div class="color-tape"></div>
 </aside>
-<!--SIDEBAR-->
+<div class="color-tape-vertical"></div>
+<!--SIDEBAR end-->
 
 <!--FILTERS-->
 <div class="filters">
