--- a/news.html
+++ b/news.html
@@ -129,7 +129,7 @@
 		</nav>
 		<!-- main navigation end -->
 		<!--sidebar footer-->
-		<div class="sb__footer">
+		<div class="sidebar-footer">
 			<!--slogan-->
 			<div class="slogan"><span>This is more than just an interactive books.</span></div>
 			<!--slogan end-->
