--- a/products.html
+++ b/products.html
@@ -125,13 +125,16 @@
 					<li><a href="contacts.html"><span>Contacts</span></a></li>
 				</ul>
 			</nav>
-			<!-- main navigation end -->			<!--sidebar footer-->
+			<!-- main navigation end -->
+			<!--sidebar footer-->
 			<div class="sidebar-footer">
 				<!--slogan-->
 				<div class="slogan"><span>This is more than just an interactive books.</span></div>
-				<!--slogan end-->				<!--phone-->
+				<!--slogan end-->
+				<!--phone-->
 				<div class="phone"><a href="tel:+375 29 135-35-55">+375 29 135-35-55</a></div>
-				<!--phone end-->				<!--social networks-->
+				<!--phone end-->
+				<!--social networks-->
 				<ul class="social-networks">
 					<li>
 						<a href="#"> <span>facebook</span> <i class="soc-depict-fb"></i> <i class="soc-depict-fb-h"></i> </a>
@@ -221,10 +224,7 @@
 				<!--filters drop end-->
 			</div>
 			<div class="filters__group">
-				<div class="button find-items find-items-js">
-					<div class="filters-counter-ok">ok</div>
-					<div class="filters-counter filters-counter-js"></div>
-				</div>
+				<div class="button filters-counter filters-counter-js"></div>
 				<a href="#" class="button clear-filter disabled"><i class="depict-clear"></i><span>Clear filter</span></a>
 			</div>
 			<div class="filters__group">
