--- a/contacts.html
+++ b/contacts.html
@@ -126,25 +126,30 @@
 					<li class="active"><a href="javascript:void(0)"><span>Contacts</span></a></li>
 				</ul>
 			</nav>
-			<!-- main navigation end -->			<!--sidebar footer-->
+			<!-- main navigation end -->
+			<!--sidebar footer-->
 			<div class="sidebar-footer">
-				<!--slogan-->
-				<div class="slogan"><span>This is more than just an interactive books.</span></div>
-				<!--slogan end-->				<!--phone-->
-				<div class="phone"><a href="tel:+375 29 135-35-55">+375 29 135-35-55</a></div>
-				<!--phone end-->				<!--social networks-->
-				<ul class="social-networks">
-					<li>
-						<a href="#"> <span>facebook</span> <i class="soc-depict-fb"></i> <i class="soc-depict-fb-h"></i> </a>
-					</li>
-					<li>
-						<a href="#"> <span>twitter</span> <i class="soc-depict-tw"></i> <i class="soc-depict-tw-h"></i> </a>
-					</li>
-					<li>
-						<a href="#"> <span>vk</span> <i class="soc-depict-yt"></i> <i class="soc-depict-yt-h"></i> </a>
-					</li>
-				</ul>
-				<!--social networks end-->
+				<div class="sidebar-footer__holder">
+					<!--slogan-->
+					<div class="slogan"><span>This is more than just an interactive books.</span></div>
+					<!--slogan end-->
+					<!--phone-->
+					<div class="phone"><a href="tel:+375 29 135-35-55">+375 29 135-35-55</a></div>
+					<!--phone end-->
+					<!--social networks-->
+					<ul class="social-networks">
+						<li>
+							<a href="#"> <span>facebook</span> <i class="soc-depict-fb"></i> <i class="soc-depict-fb-h"></i> </a>
+						</li>
+						<li>
+							<a href="#"> <span>twitter</span> <i class="soc-depict-tw"></i> <i class="soc-depict-tw-h"></i> </a>
+						</li>
+						<li>
+							<a href="#"> <span>vk</span> <i class="soc-depict-yt"></i> <i class="soc-depict-yt-h"></i> </a>
+						</li>
+					</ul>
+					<!--social networks end-->
+				</div>
 			</div>
 			<!--sidebar footer end-->
 		</div>
