--- a/products.html
+++ b/products.html
@@ -128,25 +128,27 @@
 			<!-- main navigation end -->
 			<!--sidebar footer-->
 			<div class="sidebar-footer">
-				<!--slogan-->
-				<div class="slogan"><span>This is more than just an interactive books.</span></div>
-				<!--slogan end-->
-				<!--phone-->
-				<div class="phone"><a href="tel:+375 29 135-35-55">+375 29 135-35-55</a></div>
-				<!--phone end-->
-				<!--social networks-->
-				<ul class="social-networks">
-					<li>
-						<a href="#"> <span>facebook</span> <i class="soc-depict-fb"></i> <i class="soc-depict-fb-h"></i> </a>
-					</li>
-					<li>
-						<a href="#"> <span>twitter</span> <i class="soc-depict-tw"></i> <i class="soc-depict-tw-h"></i> </a>
-					</li>
-					<li>
-						<a href="#"> <span>vk</span> <i class="soc-depict-yt"></i> <i class="soc-depict-yt-h"></i> </a>
-					</li>
-				</ul>
-				<!--social networks end-->
+				<div class="sidebar-footer__holder">
+					<!--slogan-->
+					<div class="slogan"><span>This is more than just an interactive books.</span></div>
+					<!--slogan end-->
+					<!--phone-->
+					<div class="phone"><a href="tel:+375 29 135-35-55">+375 29 135-35-55</a></div>
+					<!--phone end-->
+					<!--social networks-->
+					<ul class="social-networks">
+						<li>
+							<a href="#"> <span>facebook</span> <i class="soc-depict-fb"></i> <i class="soc-depict-fb-h"></i> </a>
+						</li>
+						<li>
+							<a href="#"> <span>twitter</span> <i class="soc-depict-tw"></i> <i class="soc-depict-tw-h"></i> </a>
+						</li>
+						<li>
+							<a href="#"> <span>vk</span> <i class="soc-depict-yt"></i> <i class="soc-depict-yt-h"></i> </a>
+						</li>
+					</ul>
+					<!--social networks end-->
+				</div>
 			</div>
 			<!--sidebar footer end-->
 		</div>
@@ -156,7 +158,9 @@
 <!--SIDEBAR end-->
 
 <!--FILTERS-->
-<div class="filters">
+<div class="filters-opener"><a href="#" class="btn-filter-opener btn-filter-opener-js">Filters</a></div>
+<div class="filters filters-js">
+	<a href="#" class="btn-close btn-filter-close btn-filter-close-js">Close</a>
 	<div class="filters__panel">
 		<div class="filters__panel-holder">
 			<div class="filters__group">
@@ -169,6 +173,7 @@
 			</div>
 			<div class="filters__group">
 				<div class="tags-group filters-tags-js button-group-js filters-button-middle" data-tags-group="state">
+					<span class="filters__label hide-state">Labels:</span>
 					<a href="#" class="button" data-filter=".tag-new">New</a>
 					<a href="#" class="button" data-filter=".tag-popular">Popular</a>
 					<a href="#" class="button" data-filter=".tag-exclusive">Exclusive</a>
@@ -227,7 +232,7 @@
 				<div class="button filters-counter filters-counter-js"></div>
 				<a href="#" class="button clear-filter disabled"><i class="depict-clear"></i><span>Clear filter</span></a>
 			</div>
-			<div class="filters__group">
+			<div class="filters__group filters__search">
 				<div class="search-form">
 					<form action="#" method="get">
 						<div class="input-wrap">
