--- a/contacts.html
+++ b/contacts.html
@@ -60,7 +60,8 @@
 			<div class="logo">
 				<a href="index.html"> <strong class="logo__img">AZToys</strong> <em class="logo__slogan">Children's learning "Azbook"</em> </a>
 			</div>
-			<!--logo end-->			<!-- main navigation -->
+			<!--logo end-->
+			<!-- main navigation -->
 			<nav class="nav">
 				<ul class="nav-list">
 					<li><a href="index.html"><span>Home</span></a></li>
