--- a/products.html
+++ b/products.html
@@ -563,8 +563,8 @@
 			</div>
 			<div class="footer-col"><a href="tel:520-834-1191">520-834-1191</a> <span class="slash">/</span> <a href="mailto:az-toys@gmail.com">az-toys@gmail.com</a></div>
 			<div class="footer-col footer-col_right">
-				<div class="site-developer">
-					<a href="http://astronim.by/"> <span class="text-inner">Design & Programming</span> - <span class="site-developer_logo">Astronim*</span> </a>
+				<div class="developer">
+					<a href="http://astronim.by/"> <span class="text-inner">Design & Programming</span> - <span class="developer_logo">Astronim*Support</span> </a>
 				</div>
 			</div>
 		</div>
