--- a/contacts.html
+++ b/contacts.html
@@ -226,7 +226,7 @@
 							<input type="text" placeholder="First name">
 							<input type="text" placeholder="Last name">
 							<input type="email" placeholder="E-mail">
-							<input type="email" placeholder="Phone">
+							<input type="text" placeholder="Phone">
 							<div class="select">
 								<select class="cselect" name="country">
 									<option value="1">Country</option>
