--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="sidebar__frame">
 			<!--logo-->
 			<div class="logo">
-				<a href="javascript:void(0)"> <strong class="logo__img">AZToys</strong> <em class="logo__slogan">Children's learning "Azbook"</em> </a>
+				<a href="index.html"> <strong class="logo__img">AZToys</strong> <em class="logo__slogan">Children's learning "Azbook"</em> </a>
 			</div>
 			<!--logo end-->
 			<!-- main navigation -->
