--- a/products.html
+++ b/products.html
@@ -257,7 +257,7 @@
 		<!--CONTENT-->
 		<div class="content user-content layout">
 			<div class="section-title"><h2>Products</h2></div>
-			<div class="products__list products">
+			<div class="products__list products filters-container-js">
 				<div class="products__item tag-younger tag-educational tag-music tag-set tag-puzzle">
 					<a href="#" class="products__inner">
 						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
