--- a/elements.html
+++ b/elements.html
@@ -99,6 +99,8 @@
 					<li><i class="depict-close-h"></i></li>
 					<li><i class="depict-play"></i></li>
 					<li><i class="depict-play-h"></i></li>
+					<li><i class="depict-arrow-down"></i></li>
+					<li><i class="depict-arrow-down-h"></i></li>
 					<li><i class=""></i></li>
 				</ul>
 
