--- a/products.html
+++ b/products.html
@@ -233,13 +233,13 @@
 				<a href="#" class="button clear-filter disabled"><i class="depict-clear"></i><span>Clear filter</span></a>
 			</div>
 			<div class="filters__group filters__search">
-				<div class="search-form">
+				<div class="search-form filters-search-js">
 					<form action="#" method="get">
 						<div class="input-wrap">
 							<input type="search" value="" placeholder="Search">
 							<div class="btn-search">
 								<i class="depict-search"></i>
-								<input type="submit" value="">
+								<!--<input type="submit" value="">-->
 							</div>
 						</div>
 					</form>
@@ -572,6 +572,69 @@
 	</div>
 </footer>
 <!--FOOTER end-->
+
+<!--popup-->
+<div class="popup popup-js">
+	<a href="#" class="btn-close">Close</a>
+	<div class="popup-overflow">
+		<div class="popup-layout">
+			<div class="popup-align">
+				<div class="max-wrap">
+					<!--product card-->
+					<div class="product-card">
+						<div class="product-card__visual">
+							<div class="product-card__gallery">
+								<img src="img/img-products-lg-01.jpg">
+								<img src="img/img-products-lg-02.jpg">
+								<img src="img/img-products-lg-03.jpg">
+							</div>
+						</div>
+						<div class="product-card__content">
+							<strong class="product-card__title">KIDS PAD – Fun on the Farm</strong>
+							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals ...</div>
+							<div class="text-full">
+								<a href="#" class="text-full-js"><span>full description</span> <i></i></a>
+							</div>
+							<div class="product-card__box">
+								<dl class="product-card__dl">
+									<dt>Series:</dt>
+									<dd>Kids pad</dd>
+									<dt>Name:</dt>
+									<dd>Fun on the farm</dd>
+									<dt>Age:</dt>
+									<dd>2-3, 4-5</dd>
+									<dt>Category:</dt>
+									<dd>Educational toy Toy tablet Entertaining musical toy</dd>
+								</dl>
+							</div>
+							<strong class="product-card__subtitle">Product specifications:</strong>
+							<div class="product-card__box">
+								<dl class="product-card__dl">
+									<dt>Dimensions:</dt>
+									<dd>3,5 x 32 x 23 cm</dd>
+									<dt>Language:</dt>
+									<dd>English</dd>
+									<dt>What Inside:</dt>
+									<dd>toy tablet, A3 batteries * 2 pcs</dd>
+								</dl>
+							</div>
+							<strong class="product-card__subtitle">Skills:</strong>
+							<div class="product-card__box">
+								<ul class="nav-drop__list">
+									<li><i class="depict-skills-02"></i><span>Cognitive skills</span></li>
+									<li><i class="depict-skills-14"></i><span>Logical thinking skills</span></li>
+									<li><i class="depict-skills-09"></i><span>Musical ability</span></li>
+									<li><i class="depict-skills-13"></i><span>Visual memory develop.</span></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--popup end-->
 
 <!--JQuery library-->
 <!--jQuery with fallback to the 1.* for old IE-->
