--- a/products.html
+++ b/products.html
@@ -591,10 +591,8 @@
 					<div class="product-card__content">
 						<strong class="product-card__title">KIDS PAD – Fun on the Farm</strong>
 						<div class="product-card__widget">
-							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals</div>
-							<div class="text-full">
-								<a href="#" class="text-slide-switcher-js"><span>full description</span> <i class="depict-arrow-down"></i></a>
-							</div>
+							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals</div>
+
 						</div>
 						<div class="product-card__widget">
 							<dl class="product-card__dl">
