--- a/products.html
+++ b/products.html
@@ -159,7 +159,7 @@
 
 <!--FILTERS-->
 <div class="filters-opener"><a href="#" class="btn-filter-opener btn-filter-opener-js">Filters</a></div>
-<div class="filters filters-js">
+<div class="filters layout filters-js">
 	<a href="#" class="btn-close btn-filter-close btn-filter-close-js">Close</a>
 	<div class="filters__panel">
 		<div class="filters__panel-holder">
@@ -574,12 +574,13 @@
 <!--FOOTER end-->
 
 <!--popup-->
-<div class="popup popup-js">
-	<div class="popup-overflow">
+<div class="popup layout popup-js">
+	<div class="popup-overflow popup-scroll-js">
 		<div class="popup-align">
 			<div class="max-wrap">
 				<!--product card-->
 				<div class="product-card">
+					<strong class="product-card__title">KIDS PAD – Fun on the Farm</strong>
 					<div class="product-card__visual">
 						<div class="product-card__gallery">
 							<img src="img/img-products-lg-01.jpg">
@@ -588,8 +589,8 @@
 						</div>
 					</div>
 					<div class="product-card__content">
-						<strong class="product-card__title">KIDS PAD – Fun on the Farm</strong>
 						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Specifications:</strong>
 							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The merry farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals</div>
 						</div>
 						<div class="product-card__widget">
