--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <header class="header">
 	<!--logo-->
 	<div class="logo">
-		<a href="javascript:void(0)">
+		<a href="index.html">
 			<strong class="logo__img">AZToys</strong>
 		</a>
 	</div>
