--- a/typography.html
+++ b/typography.html
@@ -218,7 +218,7 @@
 				<!--datetime end-->
 				<h1><span style="color: #e61f00;">(h1)</span> The Road to Philly: DNC delegates turn to crowdfunding</h1>
 				<div class="clear"></div>
-				<div class="imgc full-width main-img-js" style="text-align: center;">
+				<div class="imgc full-width full-width-js" style="text-align: center;">
 					<img src="img/img-expl-lg.jpg" alt="image description">
 				</div>
 				<h2><span style="color: #e61f00;">(h2)</span> Like their candidates, delegates to the convention are turning to the internet and social media to help raise money.</h2>
