--- a/article.html
+++ b/article.html
@@ -216,48 +216,50 @@
 				<!--datetime end-->
 				<h1><span style="color: #e61f00;">(h1)</span> The Road to Philly: DNC delegates turn to crowdfunding</h1>
 				<div class="clear"></div>
-				<div class="imgc full-width main-img-js" style="text-align: center;">
+				<div class="imgc full-width full-width-js" style="text-align: center;">
 					<img src="img/img-expl-lg.jpg" alt="image description">
 				</div>
-				<h2><span style="color: #e61f00;">(h2)</span> Like their candidates, delegates to the convention are turning to the internet and social media to help raise money.</h2>
-				<p>Like many new graduates, Dallas Roberts wanted to celebrate the end of his studies at Western Washington University in Bellingham, Washington, with a trip. His proposed destination: Philadelphia, where he could attend the Democratic National Convention to support Bernie Sanders. The 22-year-old couldn't afford the $3,000 he estimated the trip would cost. So he did what many people of his generation would do. He turned to crowdfunding website GoFundMe. In just under a month, Roberts raised $1,500, enough to cover his $545 flight and a $380 per-night hotel room, which he's sharing with two other delegates. "You have to come up with funds one way or another," Roberts told me in a phone conversation last week before making the trip to Philadelphia. "Without the GoFundMe campaign and the generous contributions from friends and supporters, I wouldn't have been able to do this."</p>
-				<div class="note">
-					<p>Roberts isn't alone. Delegates are expected to foot the bill themselves, and attending the DNC is expensive. Organizers require delegates to stay at specific hotels that range in price from $300 to $600 a night, depending on how close they are to the convention center. Then there are flights, meals and the occasional tipple. Add it all up and being on hand for Hillary Clinton's crowning will likely cost many delegates more than $4,000.</p>
+				<div>
+					<h2><span style="color: #e61f00;">(h2)</span> Like their candidates, delegates to the convention are turning to the internet and social media to help raise money.</h2>
+					<p>Like many new graduates, Dallas Roberts wanted to celebrate the end of his studies at Western Washington University in Bellingham, Washington, with a trip. His proposed destination: Philadelphia, where he could attend the Democratic National Convention to support Bernie Sanders. The 22-year-old couldn't afford the $3,000 he estimated the trip would cost. So he did what many people of his generation would do. He turned to crowdfunding website GoFundMe. In just under a month, Roberts raised $1,500, enough to cover his $545 flight and a $380 per-night hotel room, which he's sharing with two other delegates. "You have to come up with funds one way or another," Roberts told me in a phone conversation last week before making the trip to Philadelphia. "Without the GoFundMe campaign and the generous contributions from friends and supporters, I wouldn't have been able to do this."</p>
+					<div class="note">
+						<p>Roberts isn't alone. Delegates are expected to foot the bill themselves, and attending the DNC is expensive. Organizers require delegates to stay at specific hotels that range in price from $300 to $600 a night, depending on how close they are to the convention center. Then there are flights, meals and the occasional tipple. Add it all up and being on hand for Hillary Clinton's crowning will likely cost many delegates more than $4,000.</p>
+					</div>
+					<div class="imgc">
+						<img src="img/img-expl-sm.jpg" alt="image description">
+					</div>
+					<h2>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</h2>
+					<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
+					<p>Despite the worry over finances, getting to the DNC is the thrill of a lifetime, said Roberts, the recent college grad.</p>
+					<p>Roberts said he blinked hard when he realized that one night in a hotel room cost nearly as much as he was paying in rent a few months ago when he was a student. Still, he said it's worth it, particularly when he hears party elders tell stories about the presidents they were able to see when they were his age.</p>
+					<!--blockquote-->
+					<div class="blockquote">
+						<blockquote>
+							<div class="text-layout">
+								<q>Observers of politics say the evolution of political fund-raising is a sign of the times that mirrors earlier changes in technology. Campaigns incorporated email campaigns and credit card donations as those technologies became mainstream. For many delegates</q>
+								<cite>Author quotes</cite>
+							</div>
+						</blockquote>
+					</div>
+					<!--blockquote end-->
+					<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
+					<p>Despite the worry over finances, getting to the DNC is the thrill of a lifetime, said Roberts, the recent college grad.</p>
+					<p>Roberts said he blinked hard when he realized that one night in a hotel room cost nearly as much as he was paying in rent a few months ago when he was a student. Still, he said it's worth it, particularly when he hears party elders tell stories about the presidents they were able to see when they were his age.</p>
+					<h2>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</h2>
+					<p>Liz De La Torre, 30, a Clinton delegate from St. Paul, Minnesota, started her GoFundMe campaign at the advice of friends shortly after she won her spot on the delegation at a statewide convention in early June. But once she saw how many other delegates had already started passing the hat online, she decided to add a traditional fund-raising element to her campaign: homemade tamales for those who donated.</p>
+					<p>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</p>
+					<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
+					<!--more-->
+					<div class="more">
+						<h2>More:</h2>
+						<ul class="more-list">
+							<li><a href="#">Gamers around the world have been waiting for this game!</a></li>
+							<li><a href="#">Forge Of Empires - The Only 2 Sites You eed to Know About When Building a Website</a></li>
+							<li><a href="#">The Ultimate Cheap Flights Finder is Here!</a></li>
+						</ul>
+					</div>
+					<!--more end-->
 				</div>
-				<div class="imgc">
-					<img src="img/img-expl-sm.jpg" alt="image description">
-				</div>
-				<h2>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</h2>
-				<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
-				<p>Despite the worry over finances, getting to the DNC is the thrill of a lifetime, said Roberts, the recent college grad.</p>
-				<p>Roberts said he blinked hard when he realized that one night in a hotel room cost nearly as much as he was paying in rent a few months ago when he was a student. Still, he said it's worth it, particularly when he hears party elders tell stories about the presidents they were able to see when they were his age.</p>
-				<!--blockquote-->
-				<div class="blockquote">
-					<blockquote>
-						<div class="text-layout">
-							<q>Observers of politics say the evolution of political fund-raising is a sign of the times that mirrors earlier changes in technology. Campaigns incorporated email campaigns and credit card donations as those technologies became mainstream. For many delegates</q>
-							<cite>Author quotes</cite>
-						</div>
-					</blockquote>
-				</div>
-				<!--blockquote end-->
-				<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
-				<p>Despite the worry over finances, getting to the DNC is the thrill of a lifetime, said Roberts, the recent college grad.</p>
-				<p>Roberts said he blinked hard when he realized that one night in a hotel room cost nearly as much as he was paying in rent a few months ago when he was a student. Still, he said it's worth it, particularly when he hears party elders tell stories about the presidents they were able to see when they were his age.</p>
-				<h2>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</h2>
-				<p>Liz De La Torre, 30, a Clinton delegate from St. Paul, Minnesota, started her GoFundMe campaign at the advice of friends shortly after she won her spot on the delegation at a statewide convention in early June. But once she saw how many other delegates had already started passing the hat online, she decided to add a traditional fund-raising element to her campaign: homemade tamales for those who donated.</p>
-				<p>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</p>
-				<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
-				<!--more-->
-				<div class="more">
-					<h2>More:</h2>
-					<ul class="more-list">
-						<li><a href="#">Gamers around the world have been waiting for this game!</a></li>
-						<li><a href="#">Forge Of Empires - The Only 2 Sites You eed to Know About When Building a Website</a></li>
-						<li><a href="#">The Ultimate Cheap Flights Finder is Here!</a></li>
-					</ul>
-				</div>
-				<!--more end-->
 			</div>
 		</div>
 		<!--CONTENT end-->
